--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ twine
 wheel>=0.29
 
 # data science
-numpy
+numpy==1.18.5
 pandas
 scikit-learn
 
@@ -23,7 +23,11 @@ mlflow
 s3fs
 
 # utilities
-six>=1.14
+six==1.15.0
 joblib
 memoized-property
 termcolor
+
+#other
+python-gitlab
+scikit-learn==0.22
